First time autoloading

--- a/packages/example/src/slides/1.md
+++ b/packages/example/src/slides/1.md
@@ -1,3 +1,16 @@
-# Ciao
+---
+qualcosa: gelato
+---
 
-come, va?
+<section>
+
+## Bene
+
+grazie. Ho tanta voglia di {qualcosa}
+
+</section>
+<section>
+
+## Malino...
+
+</section>
