First example prototype

--- a/packages/example/src/slides/1.md
+++ b/packages/example/src/slides/1.md
@@ -4,13 +4,13 @@ qualcosa: gelato
 
 <section>
 
-## Bene
+## Estate 🏖
 
-grazie. Ho tanta voglia di {qualcosa}
+Ho tanta voglia di...
 
 </section>
 <section>
 
-## Malino...
+## {qualcosa} 🍦😋
 
 </section>
