--- a/packages/example/src/slides/2.md
+++ b/packages/example/src/slides/2.md
@@ -1,3 +1,16 @@
 ## Però
 
 fa davvero caldo...
+
+<pre>
+  <code data-trim data-noescape class="language-python">
+    import numpy as np
+
+    def outer_sqr(v):
+      return v * v[:, np.newaxis]
+
+    if __name__ = "__main__":
+      v = np.arange(5)
+      print(outer_sqr(v))
+  </code>
+</pre>
